[package]
name = "fy16-emu-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simplelog = "0.12.1"
udbserver = "0.1.0"
unicorn-engine = { version = "2.0.2", features = ["dynamic_linkage"]}
strum = "0.25"
strum_macros = "0.25"
num-derive = "0.4.1"
num-traits = "0.2.17"
num = "0.4.1"

[patch.crates-io]
unicorn-engine = { git = "https://github.com/unicorn-engine/unicorn.git", branch = "dev" }
udbserver = { path = "/home/endes/Descargas/udbserver"}

